# DevOps

./: .env.prod.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  deps.py  health.py  reference.py  scenarios.py  toxins.py
backend/app/core/: config.py  security.py
backend/app/db/: init_data.py  session.py
backend/app/models/: __init__.py  scenario.py  user.py
backend/app/schemas/: auth.py  reference.py  scenario.py  toxin.py
backend/app/services/: risk.py
backend/app/tests/: conftest.py  test_api.py  test_core.py  test_risk.py  test_schemas.py  test_security.py
backend/marine_toxicity_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/src/: App.jsx.html  index.html  main.jsx.html
frontend/src/: App.jsx
frontend/src/__tests__/: App.test.jsx  main.test.jsx
frontend/src/components/: AdminPanel.jsx  AuthPanel.jsx  ScenarioForm.jsx  ScenarioList.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
frontend/src/test/: setup.js
infra/ansible/: ansible.cfg  deploy.yml  inventory.ini.example  playbook.yml
infra/terraform/: iam.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  vm.tf
lab3/: README.md
lab3/k8s/: app.yaml  load-test.yaml  monitoring.yaml
(+12 files in other folders)
